--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h1 class="heading1">Buy freelance services<br>in one click</h1>
                     <div class="search">
                         <input type="text" class="search-input" placeholder="Search by keywords">
-                        <button class="search-button"></button>
+                        <button class="search-button">🔎︎</button>
                     </div>
                 </div>
         </header>
