--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         </nav>
         <header>
                 <div class="img">
-                    <h1 class="heading1">Buy freelance services<br>in one click</h1>
-                    <div class="search">
-                        <input type="text" class="search-input" placeholder="Search by keywords">
-                        <button class="search-button">🔎︎</button>
+                    <div class="rightside">
+                        <h1 class="heading1">Buy freelance services<br>in one click</h1>
+                        <div class="search">
+                            <input type="text" class="search-input" placeholder="Search by keywords">
+                            <button class="search-button">🔎︎</button>
+                        </div>
                     </div>
                 </div>
         </header>
