--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>SolveMe</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav>
@@ -22,7 +23,7 @@
         <header>
                 <div class="img">
                     <div class="rightside">
-                        <h1 class="heading1">Buy freelance services<br>in one click</h1>
+                        <h1 class="heading1">Buy freelance <br> services<br>in one click</h1>
                         <div class="search">
                             <input type="text" class="search-input" placeholder="Search by keywords">
                             <button class="search-button">🔎︎</button>
@@ -30,6 +31,9 @@
                     </div>
                 </div>
         </header>
+        <br>
+        <br>
+        <br>
 
         <div class="footer">
             <div class="foot">© 2025 My Website | All rights reserved</div>
