--- a/findTalent.html
+++ b/findTalent.html
@@ -4,25 +4,37 @@
         <title>Find Talent</title>
         <link rel="stylesheet" href="stylecontact.css">
         <link rel="icon" href="">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
     <body>
-        <nav>
-            <div class="lefts">
-               <img src="img/Solveme.png" alt="Logo" class="solveme">
-               <a href="">Find Talent</a>
-               <a href="findWork.html">Find Work</a>
-               <a href="aboutUs.html">About us</a>
-               <a href="contact.html">Contact</a>
-               <a href="index.html">First page</a>
-            </div>
-            <div class="rights">
-                <a href="">Log in</a>
-                <a href="signUp.html" id="signup">Sign up</a>
-            </div>
-        </nav>
-        <header>
-                
 
-        </header>
+        
+       <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand fw-bold" href="#">SolveMe </a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item ">
+                        <a href="#" class="nav-link">Find Talent</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="findWork.html" class="nav-link">Find Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="aboutUs.html" class="nav-link">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">First page</a>
+                    </li>
+                </ul>
+            </div>
+       </nav>
+
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </body>
 </html>
