--- a/findWork.html
+++ b/findWork.html
@@ -4,6 +4,7 @@
         <title>Find Work</title>
         <link rel="stylesheet" href="styleWork.css">
         <link rel="icon" href="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
