--- a/findTalent.html
+++ b/findTalent.html
@@ -1,40 +1,160 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Find Talent</title>
-        <link rel="stylesheet" href="stylecontact.css">
-        <link rel="icon" href="">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    </head>
-    <body>
+<html lang="en">
 
-        
-       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand fw-bold" href="#">SolveMe </a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item ">
-                        <a href="#" class="nav-link">Find Talent</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="findWork.html" class="nav-link">Find Work</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="aboutUs.html" class="nav-link">About us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">First page</a>
-                    </li>
-                </ul>
-            </div>
-       </nav>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Find Talent</title>
+  <link rel="icon" href="">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styleTalent.css">
+  <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
+  
+</head>
 
-       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    </body>
+<body>
+  <nav class="navbar navbar-expand-lg shadow py-3">
+    <div class="container px-4">
+      <a class="navbar-brand fw-bold" href="#">
+        <img src="img/icon.png" alt="Logo">
+      </a>
+
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-lg-auto">
+          <li class="nav-item px-2">
+            <a class="nav-link" href="findTalent.html">Find Talent</a>
+          </li>
+          <li class="nav-item dropdown px-2">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Find Work
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">IT</a></li>
+              <li><a class="dropdown-item" href="#">Finance</a></li>
+              <li><a class="dropdown-item" href="#">Management</a></li>
+            </ul>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="aboutUs.html">About Us</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="index.html">First Page</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+   <section class="container my-5 ">
+    <div class="row align-items-center">
+
+      <div class="col-lg-6 mb-4 mb-lg-0">
+        <h1 class="display-3 fw-bold">Post a job today,<br>hire tomorrow</h1>
+        <p class="lead fs-3">Work with professionals who truly get<br> you and can elevate your business<br> success.</p>
+        <a href="#" class="btn btn-success custom-btn">Get Started</a>
+      </div>
+      <div class="col-lg-6">
+        <img src="img/tab.jpg" class="img-fluid h-100 w-100" alt="Example Image">
+      </div>
+    </div>
+  </section>
+
+  <section class="container text-center">
+    <h1 class="fw-bold mb-3 mt-5">The best colleagues you’ve never met</h1>
+    <p class="fs-5 mb-5">From all around the world 🌍</p>
+
+    <div class="row g-3">
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span >🇺🇸</span>
+          <h5 class="mt-2 fw-semibold">United States</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span>🇬🇧</span>
+          <h5 class="mt-2 fw-semibold">United Kingdom</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span >🇪🇸</span>
+          <h5 class="mt-2 fw-semibold">Spain</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span >🇫🇷</span>
+          <h5 class="mt-2 fw-semibold">France</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span >🇩🇪</span>
+          <h5 class="mt-2 fw-semibold">Germany</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span >🇮🇹</span>
+          <h5 class="mt-2 fw-semibold">Italy</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span >🇯🇵</span>
+          <h5 class="mt-2 fw-semibold">Japan</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span >🇰🇷</span>
+          <h5 class="mt-2 fw-semibold">South Korea</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span>🇨🇦</span>
+          <h5 class="mt-2 fw-semibold">Canada</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span >🇧🇷</span>
+          <h5 class="mt-2 fw-semibold">Brazil</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span >🇦🇺</span>
+          <h5 class="mt-2 fw-semibold">Australia</h5>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="p-4 border rounded bg-light">
+          <span>🇰🇿</span>
+          <h5 class="mt-2 fw-semibold">Kazakhstan</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <footer>
+    <p class="mb-0">© 2025 My Portfolio. All rights reserved.</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
