--- a/contact.html
+++ b/contact.html
@@ -1,80 +1,115 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>About Us</title>
-        <link rel="stylesheet" href="stylecontact.css">
-        <link rel="icon" href="">
-    </head>
-    <body>
-        <nav>
-            <div class="lefts">
-               <img src="img/Solveme.png" alt="Logo" class="solveme">
-               <a href="findTalent.html">Find Talent</a>
-               <a href="findWork.html">Find Work</a>
-               <a href="aboutUs.html">About us</a>
-               <a href="contact.html">Contact</a>
-               <a href="index.html">First page</a>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="stylecontact.css">
 
+</head>
+<body>
+
+  <nav class="navbar navbar-expand-lg shadow py-3">
+    <div class="container px-4">
+      <a class="navbar-brand fw-bold" href="#">
+        <img src="img/icon.png" alt="Logo" width="40">
+      </a>
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-lg-auto">
+          <li class="nav-item px-2"><a class="nav-link" href="findTalent.html">Find Talent</a></li>
+          <li class="nav-item dropdown px-2">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">Find Work</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">IT</a></li>
+              <li><a class="dropdown-item" href="#">Finance</a></li>
+              <li><a class="dropdown-item" href="#">Management</a></li>
+            </ul>
+          </li>
+          <li class="nav-item px-2"><a class="nav-link" href="aboutUs.html">About Us</a></li>
+          <li class="nav-item px-2"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item px-2"><a class="nav-link" href="index.html">First Page</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container my-5">
+    <div class="row g-4">
+
+      <div class="col-lg-8">
+        <h1 class="fw-bold mb-4">My Projects</h1>
+
+        <div class="row g-4">
+
+          <div class="col-12 col-md-6">
+            <div class="card shadow-sm border-0">
+              <div class="card-body">
+                <h5 class="card-title fw-bold">Web Design</h5>
+                <p class="card-text text-muted">I create modern, responsive, and visually appealing landing pages using Bootstrap — designed to look perfect on any device and optimized for performance, conversion, and user engagement.</p>
+              </div>
             </div>
-            <div class="rights">
-                <a href="">Log in</a>
-                <a href="signUp.html" id="signup">Sign up</a>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <div class="card shadow-sm border-0">
+              <div class="card-body">
+                <h5 class="card-title fw-bold">Frilance Site</h5>
+                <p class="card-text text-muted">user-friendly shopping interface focused on simplicity, speed, and a premium user experience. The layout features a minimal aesthetic, with clean typography, balanced spacing, and intuitive navigation to ensure smooth interaction for every customer.</p>
+              </div>
             </div>
-        </nav>
-        <header>
-                <div class="img">
-                    <h1 class="heading1">Who am I?<br>You want to know?</h1> 
-                </div>
-        </header>
+          </div>
 
-        <div class="container">
-            <div class="aside">
-                <h1>Short Story</h1>
-                <p>I am 17, from the vast lands of Kazakhstan, a mind restless with curiosity and fire. Code is my language, and I speak it fluently—Python, JavaScript, C++, and more. I wander through lines of logic, chasing ideas that others only dream of.<br><br>
-
-                    Some call it ambition. I call it destiny.<br><br>
-
-                    I am young, yet I see beyond the obvious. Every project, every challenge, every problem is a door. And I am drawn to what lies beyond.<br><br>
-
-                    The future is unwritten. I am here to write it.</p>
+          <div class="col-12 col-md-6">
+            <div class="card shadow-sm border-0">
+              <div class="card-body">
+                <h5 class="card-title fw-bold">Bank System in Java</h5>
+                <p class="card-text text-muted">A fully functional Bank Management System developed in Java, designed to handle essential banking operations with a focus on performance, data integrity, and user experience.</p>
+              </div>
             </div>
-            <div class="mainpart">
-                <h1>Projects:</h1>
-                <div class="proj">
-                    <h2>
-                        Freelance Nexus
-                    </h2>
-                    <ul>
-                        <li>A global platform where talent meets opportunity from every corner of the world.</li>
-                        <li>Built entirely from scratch: smart project matching, secure transactions, and intelligent recommendations.</li>
-                        <li>Every feature hides a layer of complexity; casual users see simplicity, but experienced minds sense the magic in the code.</li>
-                    </ul>
-                </div>
-                <div class="proj">
-                    <h2>
-                        AI Oracle
-                    </h2>
-                    <ul>
-                        <li>An AI that understands context and predicts your next moves.</li>
-                        <li>Engages in full conversations, provides advice, analyzes data, and suggests unexpected solutions.</li>
-                        <li>Its architecture is like a labyrinth: the more you interact, the deeper its intelligence reveals itself.</li>
-                    </ul>
-                </div>
-                <div class="proj">
-                    <h2>
-                        Phantom Portfolio
-                    </h2>
-                    <ul>
-                        <li>An interactive showcase where every click opens a secret world.</li>
-                        <li>Animations and visual effects create a living space where projects “breathe” and tell their stories.</li>
-                        <li>Hidden layers for developers and designers who want to explore the code and discover how illusions are crafted.</li>
-                    </ul>
-                </div>
+          </div>
+
+          <div class="col-12 col-md-6">
+            <div class="card shadow-sm border-0">
+              <div class="card-body">
+                <h5 class="card-title fw-bold">Portfolio</h5>
+                <p class="card-text text-muted">A modern, responsive personal portfolio website designed to highlight creative and technical projects in a clean and professional way. Built with a focus on minimalism, interactivity, and performance, it serves as a digital showcase of design skills, coding ability, and project diversity.</p>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
 
-        <div class="footer">
-            <div class="foot">© 2025 My Website | All rights reserved</div>
+      <div class="col-lg-4">
+        <div class="sidebar">
+          <h4 class="fw-bold mb-3">About Me</h4>
+          <p class="text-muted">’m a Front-End Developer with a strong passion for building modern, responsive, and user-friendly web interfaces. I specialize in HTML, CSS, and Bootstrap, creating clean and intuitive layouts that look great on any device.<br><br>
+
+My focus is on simplicity, performance, and accessibility — ensuring that every project not only looks good but also provides a smooth and enjoyable user experience. I enjoy turning design ideas into fully functional websites and bringing creative concepts to life through thoughtful coding and attention to detail.</p>
+
+          <hr>
+
+          <h5 class="fw-bold mb-2">Contact</h5>
+          <p class="mb-1"><strong>Email:</strong> bekesdastan@mail.com</p>
+          <p class="mb-1"><strong>Phone:</strong> +7 777 007 7007</p>
+          <p><strong>Location:</strong> Karagandy, Kazakhstan</p>
         </div>
-    </body>
+      </div>
+
+    </div>
+  </main>
+  <br>
+  
+  <footer>
+    <p class="mb-0">© 2025 My Portfolio. All rights reserved.</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
