--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,83 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>About Us</title>
-        <link rel="stylesheet" href="styleAboutUs.css">
-        <link rel="icon" href="">
-    </head>
-    <body>
-        <nav>
-            <div class="lefts">
-               <img src="img/Solveme.png" alt="Logo" class="solveme">
-               <a href="findTalent.html">Find Talent</a>
-               <a href="findWork.html">Find Work</a>
-               <a href="aboutUs.html">About us</a>
-               <a href="contact.html">Contact</a>
-               <a href="index.html">First page</a>
+
+<head>
+    <title>About Us</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styleAboutUs.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg shadow py-3">
+        <div class="container px-4">
+            <div class="navbar-brand">
+                <img src="img/icon.png" alt="">
+            </div>
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarNav">
+                <ul></ul>
 
             </div>
-            <div class="rights">
-                <a href="">Log in</a>
-                <a href="signUp.html" id="signup">Sign up</a>
-            </div>
-        </nav>
-        <header>
-            <div class="leftside">
-                 <p class="heading1">We are BIG Company</p>
-                 <p class="heading2">We built this platform to match<br>top freelancers with people<br>who need them — simple,<br>transparent, and rewarding.</p>
-                 <div class="getstarted">
-                    <a href="workslist.html">Get Started</a>
-                </div>
-            </div>
-            <div class="rightside">
-                <img src="img/comp.webp" class="imgheader">
-            </div>
-        </header>
-        <div class="container">
-            <div class="aside">
-                <h1>Who we are?</h1>
-                <p>We are a global bridge connecting talent with opportunity. Every project we host links creators, coders, designers, and visionaries with possibilities that often go unnoticed.<br>
 
-Our mission is to empower ambitious minds to turn ideas into reality. With smart matching, a seamless interface, and a supportive network, we make sure every talent finds the right project, and every project finds the right talent.<br>
 
-Here, work isn’t just done—it’s crafted, elevated, and transformed into something extraordinary</p><br>
-            </div>
-            <div class="mainpart">
-                <h1>What We Provide</h1>
-                <div class="proj">
-                    <h2>
-                       Our Support
-                    </h2>
-                    <ul>
-                        <li>Dedicated team available 24/7 to answer questions and guide you through any challenges.</li>
-                        <li>Personalized assistance to help you navigate the platform and optimize your workflow.</li>
-                        <li>Quick response times so you can focus on your work without unnecessary delays.</li>
-                    </ul>
-                </div>
-                <div class="proj">
-                    <h2>
-                        Client Reviews
-                    </h2>
-                    <ul>
-                        <li>Read authentic feedback from clients to evaluate project quality and reliability.</li>
-                        <li>See reviews from other professionals like you to make informed decisions before accepting projects.</li>
-                        <li>Build trust and credibility within the community through transparent and verifiable reviews.</li>
-                    </ul>
-                </div>
-                <div class="proj">
-                    <h2>
-                      Protected Payments
-                    </h2>
-                    <ul>
-                         <li>Secure payment methods ensuring your earnings are safe at every stage of the project.</li>
-                        <li>Get paid the way you prefer, whether it’s instant transfers, bank deposits, or other secure options.</li>
-                        <li>Full protection for every transaction, giving you peace of mind while working on projects.</li>
-                    </ul>
-                </div>
-            </div>
         </div>
-        <div class="footer">
-            <div class="foot">© 2025 My Website | All rights reserved</div>
-        </div>
-    </body>
+
+    </nav>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
