--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
 
   <nav class="navbar navbar-expand-lg shadow py-3">
     <div class="container px-4">
-      <a class="navbar-brand fw-bold" href="#">
-        <img src="img/icon.png" alt="Logo" width="40">
-      </a>
+      <div class="navbar-brand" href="#">
+        <img src="img/icon.png" alt="Logo" >
+      </div>
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
         aria-label="Toggle navigation">
