--- a/findTalent.html
+++ b/findTalent.html
@@ -74,7 +74,7 @@
     <h1 class="fw-bold mb-3 mt-5">The best colleagues you’ve never met</h1>
     <p class="fs-5 mb-5">From all around the world 🌍</p>
 
-    <div class="row g-3">
+    <div class="row g-5 mx-3">
       <div class="col-12 col-md-6 col-lg-4">
         <div class="p-4 border rounded bg-light">
           <span >🇺🇸</span>
@@ -152,7 +152,7 @@
 
 
   <footer>
-    <p class="mb-0">© 2025 My Portfolio. All rights reserved.</p>
+    <p class="mb-0">© 2025 All rights reserved.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
